--- a/scaffold-move-main/packages/nextjs/package.json
+++ b/scaffold-move-main/packages/nextjs/package.json
@@ -36,6 +36,7 @@
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-json-view": "^1.21.3",
+    "recharts": "^2.15.1",
     "use-debounce": "^8.0.4",
     "usehooks-ts": "^2.16.0",
     "viem": "2.23.0",
