--- a/scaffold-move-main/packages/nextjs/package.json
+++ b/scaffold-move-main/packages/nextjs/package.json
@@ -15,8 +15,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.12.4",
-    "@aptos-labs/wallet-adapter-ant-design": "^3.0.23",
-    "@aptos-labs/wallet-adapter-react": "^3.7.9",
+    "@aptos-labs/wallet-adapter-react": "3.7.8",
     "@heroicons/react": "^2.1.5",
     "@mizuwallet-sdk/core": "^1.4.0",
     "@rainbow-me/rainbowkit": "2.1.6",
@@ -27,6 +26,7 @@
     "daisyui": "4.12.10",
     "graphql": "^16.10.0",
     "graphql-request": "^7.1.2",
+    "lucide-react": "^0.475.0",
     "next": "^14.0.4",
     "next-themes": "^0.2.1",
     "nprogress": "^0.2.0",
